--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ ul {
   padding-bottom: 94px;
 }
 .section-header {
-  padding-bottom: 50px;
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -257,10 +257,11 @@ ul {
   align-items: center;
 }
 .footer-socialmedia-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
-  padding: 12px;
   border-radius: 100%;
   background-color: var(--footer-socialmedia-bg);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -288,12 +289,18 @@ ul {
 /* Main content*/
 
 /* Hero */
+
 .hero-section {
   padding-top: 200px;
   padding-bottom: 200px;
   max-width: 1600px;
   background-color: var(--bg-hero-alt);
-  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg-img.jpg");
+  background-image: linear-gradient(
+      to bottom,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero-bg-img.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -323,7 +330,8 @@ ul {
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--white);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -331,6 +339,7 @@ ul {
   background-color: var(--bg-btn-active);
 }
 /* Priorities */
+
 .priorities-list {
   display: flex;
   flex-wrap: wrap;
@@ -355,9 +364,11 @@ ul {
   color: var(--txt-paragraph-grey);
 }
 .priorities-list-item > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 270px;
   height: 120px;
-  padding: 25px 100px;
   margin-bottom: 30px;
   background-color: var(--light-grey);
   border-radius: 4px;
@@ -389,6 +400,7 @@ ul {
 .priorities-list-item:nth-child(4)::before {
   background-image: url(../images/Prior-4.svg);
 } */
+
 /* Projects */
 .projects {
   padding-top: 0px;
@@ -407,7 +419,7 @@ ul {
 .projects-list-item > p {
   display: block;
   width: 100%;
-  height: 70px;
+  min-height: 70px;
   padding-top: 27px;
   padding-bottom: 27px;
   position: absolute;
@@ -423,6 +435,7 @@ ul {
   color: var(--white);
 }
 /* Staff */
+
 .staff {
   background-color: var(--light-grey);
 }
@@ -434,21 +447,24 @@ ul {
 .staff-list-item {
   width: calc((100% - 90px) / 4);
   background-color: var(--white);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 .staff-list-item + .staff-list-item {
   margin-left: 30px;
 }
-.staff-list-item > h3 {
-  margin-top: 30px;
+.staff-member-descr {
+  padding: 30px 15px;
+}
+.staff-member-descr > h3 {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
-.staff-list-item p {
+.staff-member-descr > p {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.19;
@@ -459,13 +475,13 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 30px;
 }
 .socialmedia-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
-  padding: 12px;
   border-radius: 100%;
   background-color: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -489,16 +505,18 @@ ul {
 }
 
 /* Clients */
+
 .clients-list {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .clients-list-link {
-  display: block;
-  width: 170px;
-  padding: 16px 32px;
+  display: flex;
+  justify-content: center;
   align-items: center;
+  width: 170px;
+  min-height: 92px;
   border: 1px solid var(--icon-grey);
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -543,7 +561,8 @@ ul {
   top: 50%;
   left: 50%;
   background-color: var(--white);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -598,12 +617,14 @@ ul {
   font-size: 16px;
   line-height: 1.625;
   letter-spacing: 0.03em;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-filter-btn:hover,
 .portfolio-filter-btn:focus {
   background-color: #2196f3;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-filter-btn-1 {
   padding-left: 25px;
@@ -640,9 +661,7 @@ ul {
   color: var(--txt-paragraph-grey);
 }
 .portfolio-item-link .title-text {
-  padding-left: 24px;
-  padding-top: 20px;
-  padding-bottom: 19px;
+  padding: 20px 24px 19px 24px;
   background-color: var(--white);
   border-right: 1px solid var(--color-gallery-item-border);
   border-left: 1px solid var(--color-gallery-item-border);
@@ -671,12 +690,14 @@ ul {
   letter-spacing: 0.03em;
   color: var(--white);
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
 }
 .portfolio-item-link:hover,
 .portfolio-item-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-item-link:hover .pic-overlay > p,
 .portfolio-item-link:focus .pic-overlay > p {
