--- a/css/styles.css
+++ b/css/styles.css
@@ -323,13 +323,15 @@ ul {
   min-width: 216px;
   min-height: 50px;
   border: none;
-  padding: 10px 32px;
+  border-radius: 4px;
+  padding: 10px;
   background-color: var(--accent-blue);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--white);
+  text-align: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
