--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,10 @@ ul {
 .footer-contacts-link {
   color: var(--txt-adress-link-transparent);
 }
-.footer-socialmedia-claimer {
+.footer-socialmedia-block {
+  margin-right: 93px;
+}
+.footer-claimer {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -283,7 +286,36 @@ ul {
 .footer-socialmedia-link:focus .footer-socialmedia-icon {
   fill: var(--white);
 }
-
+.footer-subscription-block {
+}
+.submit-btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 12px;
+  min-width: 200px;
+  min-height: 50px;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  background-color: var(--accent-blue);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--white);
+  text-align: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.submit-btn:hover,
+.submit-btn:focus {
+  background-color: var(--bg-btn-active);
+}
+.submit-btn > svg {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+}
 /* HOME PAGE */
 
 /* Main content*/
