--- a/css/styles.css
+++ b/css/styles.css
@@ -286,7 +286,20 @@ ul {
 .footer-socialmedia-link:focus .footer-socialmedia-icon {
   fill: var(--white);
 }
-.footer-subscription-block {
+.subscription-form input {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: transparent;
+}
+.subscription-form input[placeholder] {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 .submit-btn {
   display: inline-flex;
@@ -723,10 +736,10 @@ ul {
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--white);
+  opacity: 0;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 0;
 }
 .portfolio-item-link:hover,
 .portfolio-item-link:focus {
@@ -735,6 +748,6 @@ ul {
 }
 .portfolio-item-link:hover .pic-overlay > p,
 .portfolio-item-link:focus .pic-overlay > p {
-  transform: translateY(0);
   opacity: 1;
+  transform: translateY(0);
 }
