--- a/css/styles.css
+++ b/css/styles.css
@@ -131,11 +131,11 @@ ul {
 /* Header */
 .header {
   background-color: var(--white);
+  border-bottom: 1px solid var(--color-divider-line);
 }
 .container-header {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-divider-line);
 }
 .container-header nav,
 .container-header ul {
@@ -167,6 +167,7 @@ ul {
   bottom: 0;
   left: 0;
   position: absolute;
+  transform: translateY(1px);
   width: 100%;
   height: 4px;
   border-radius: 3px;
@@ -182,7 +183,7 @@ ul {
   line-height: 1.143;
   letter-spacing: 0.02em;
   color: var(--txt-paragraph-grey);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-adress-link-icon {
   width: 16px;
@@ -665,11 +666,11 @@ ul {
   line-height: 1.625;
   letter-spacing: 0.03em;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-filter-btn:hover,
 .portfolio-filter-btn:focus {
-  background-color: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
