--- a/css/styles.css
+++ b/css/styles.css
@@ -601,8 +601,7 @@ ul {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-window {
-  display: block;
-  min-width: 528px;
+  width: 528px;
   min-height: 581px;
   padding: 8px;
   position: absolute;
@@ -615,27 +614,23 @@ ul {
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-window > button {
-  display: block;
+.modal-close-btn {
   width: 30px;
   height: 30px;
-  padding: 6px;
   position: absolute;
   top: 8px;
   right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: var(--white);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 100%;
   cursor: pointer;
 }
-.modal-close-btn {
-  display: block;
+.modal-close-btn-icon {
   width: 18px;
   height: 18px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 .modal-overlay.is-hidden {
   opacity: 0;
