--- a/css/styles.css
+++ b/css/styles.css
@@ -603,7 +603,7 @@ ul {
 .modal-window {
   width: 528px;
   min-height: 581px;
-  padding: 8px;
+  padding: 40px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -632,6 +632,32 @@ ul {
   width: 18px;
   height: 18px;
 }
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.modal-form > p {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--txt-main);
+}
+.modal-form > input {
+  width: 100%;
+  max-height: 40px;
+  margin-bottom: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.modal-form > textarea {
+  margin-bottom: 20px;
+}
+
 .modal-overlay.is-hidden {
   opacity: 0;
   visibility: hidden;
