--- a/css/styles.css
+++ b/css/styles.css
@@ -296,7 +296,7 @@ ul {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   background-color: transparent;
 }
-.subscription-form input[placeholder] {
+.subscription-form input::placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
@@ -681,9 +681,8 @@ ul {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
-.modal-form > textarea[placeholder] {
-  /* color: rgba(117, 117, 117, 0.5); */
-  color: #2196f3;
+.modal-form > textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
 }
 .modal-checkbox-wrapper {
   margin-bottom: 30px;
