--- a/css/styles.css
+++ b/css/styles.css
@@ -675,10 +675,14 @@ ul {
 .modal-form-input {
   width: 100%;
   height: 40px;
-  padding: 12px 12px 12px 42px;
-
+  padding: 12px 12px 12px 12px;
+  text-indent: 30px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--txt-main);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-icon-wrapper {
@@ -708,16 +712,20 @@ ul {
   width: 15px;
   height: 12px;
 }
+.modal-form-input:hover {
+}
 .modal-form-input:hover ~ .modal-form-icon-wrapper > svg,
 .modal-form-input:focus ~ .modal-form-icon-wrapper > svg {
   fill: var(--accent-blue);
 }
 .modal-form-input:hover,
-.modal-form-input:focus {
+.modal-form-input:focus,
+.modal-form-textarea:hover,
+.modal-form-textarea:focus {
   border-color: var(--accent-blue);
 }
 
-.modal-form > textarea {
+.modal-form-textarea {
   width: 100%;
   max-height: 120px;
   padding: 12px 16px;
@@ -727,8 +735,16 @@ ul {
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--txt-main);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form > textarea::placeholder {
+.modal-form-textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 .modal-checkbox-wrapper {
