subscription btn box-shadow added

--- a/css/styles.css
+++ b/css/styles.css
@@ -311,6 +311,7 @@ ul {
   border-radius: 4px;
   padding: 10px;
   background-color: var(--accent-blue);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
