--- a/css/styles.css
+++ b/css/styles.css
@@ -291,8 +291,13 @@ ul {
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
+  outline: none;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   background-color: transparent;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: var(--white);
 }
 .subscription-form input::placeholder {
   font-size: 16px;
@@ -762,10 +767,28 @@ ul {
   text-decoration-line: underline;
   color: var(--accent-blue);
 }
-.modal-form > button {
+.modal-submit-btn {
   align-self: center;
-  margin: 0;
+  min-width: 200px;
+  min-height: 50px;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  background-color: var(--accent-blue);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--white);
+  text-align: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal-submit-btn:hover,
+.modal-submit-btn:focus {
+  background-color: var(--bg-btn-active);
+}
+
 /* PORTFOLIO PAGE */
 
 /* Portfolio filter buttons */
