--- a/css/styles.css
+++ b/css/styles.css
@@ -691,32 +691,15 @@ ul {
   color: var(--txt-main);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-icon-wrapper {
+.modal-form-icon {
   width: 18px;
   height: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: absolute;
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
-}
-.modal-form-icon {
   fill: var(--txt-main);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form-icon.user {
-  width: 12px;
-  height: 12px;
-}
-.modal-form-icon.phone {
-  width: 13px;
-  height: 13px;
-}
-.modal-form-icon.email {
-  width: 15px;
-  height: 12px;
 }
 .modal-form-textarea {
   width: 100%;
@@ -741,8 +724,8 @@ ul {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-form-input:hover ~ .modal-form-icon-wrapper > svg,
-.modal-form-input:focus ~ .modal-form-icon-wrapper > svg {
+.modal-form-input:hover + .modal-form-icon,
+.modal-form-input:focus + .modal-form-icon {
   fill: var(--accent-blue);
 }
 .modal-form-input:hover,
